--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,14 +26,14 @@
     </queries>
 
     <application
-        android:label="Hexacom"
+        android:label="Rehmania Herbs"
         android:name="${applicationName}"
         android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_MAP_KEY_HERE"/>
+            android:value="AIzaSyDhUNZjxsnyZA6mnOalo-v6169wAhh7gYs"/>
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
