--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,7 +31,7 @@ if (keystorePropertiesFile.exists()) {
 }
 
 android {
-    namespace "com.sixamtech.hexacom_user"
+    namespace "rehmaniaherbs.zarin.solutions"
     compileSdk 34
     ndkVersion flutter.ndkVersion
 
@@ -48,7 +48,7 @@ android {
     }
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.sixamtech.hexacom_user"
+        applicationId "rehmaniaherbs.zarin.solutions"
         minSdkVersion 23
         targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
