--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Hexacom",
-    "short_name": "Hexacom",
+    "name": "Rehmania Herbs",
+    "short_name": "Rehmania Herbs",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
